# Tiny-Ray-Tracing-Renderer

./: .gitignore  CMakeLists.txt
src/common/: camera.h  interval.h  utils.h
src/oneWeekend/: color.h  hittable.h  hittable_list.h  main.cpp  material.h  ray.h  sphere.h  vec3.h
